# indian-place-generator

./: .gitignore  Dockerfile  README.md  app.py  cloudbuild.yml  model.ipynb  pyproject.toml  requirements.txt  utils.py
models/: best_model.pt
static/: vocab.pickle
templates/: index.html
